adds background image and style changes

--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
     <!-------------------------------------------title-------------------------------------------->
     <title>About Tom Christ</title>
     <!----------------------------This is where your style link goes------------------------------>
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
 <body>
     <header>
-    <h1>Tom Christ</h1>
+    <h1 id="my-name">Tom Christ</h1>
     <nav>
-        <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </nav>
     </header>
-            
+    <br>
     <section>
         <h1>About Me</h1>
         <hr>
@@ -44,7 +43,7 @@
     </section>
 
     <footer>
-
+        <p>Footer content</p>
     </footer>
 </body>
 
