--- a/portfolio.html
+++ b/portfolio.html
@@ -9,31 +9,30 @@
     <meta name="keywords" content="keywords, go, here">
     <meta name="author" content="Tom Christ">
     <!-------------------------------------------title-------------------------------------------->
-    <title>This is the Title of the Website</title>
+    <title>The Portfolio of Tom Christ</title>
     <!----------------------------This is where your style link goes------------------------------>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
 <body>
     <header>
-    <h1>Tom Christ</h1>
+    <h1 id="my-name">Tom Christ</h1>
     <nav>
-        <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </nav>
     </header>
 
-    <h1>Heading 1</h1>
-        <p>Paragraph</p>
-
-        <h2>Heading 2</h2>
-            <p>Paragraph</p>
-
+    <section>
+        <p>Section content</p>
+    </section>
+    
+    <footer>
+        <p>Footer Content</p>
+    </footer>
 </body>
 
 <!--Style -->
