add placeholder image and style updates

--- a/index.html
+++ b/index.html
@@ -2,43 +2,42 @@
 <html lang="en-US">
 
 <head>
-    <!--------------------------------------metadata section-------------------------------------->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The index for my basic porfolio assignment">
-    <meta name="keywords" content="portfolio, class assignment">
     <meta name="author" content="Tom Christ">
-    <!-------------------------------------------title-------------------------------------------->
+    
     <title>About Tom Christ</title>
-    <!----------------------------This is where your style link goes------------------------------>
+    
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
 </head>
 
 <body>
     <header>
     <h1 id="my-name">Tom Christ</h1>
     <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
+        <p>
+        <a href="index.html">About</a> |
+        <a href="portfolio.html">Portfolio</a> |
         <a href="contact.html">Contact</a>
+        </p>
     </nav>
     </header>
-    <br>
+
     <section>
         <h1>About Me</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum scelerisque at mauris a sollicitudin. 
-             Ut non magna diam. Nam egestas augue magna, ac mollis nibh commodo vel. Nam pretium ornare libero id congue. 
-             Aliquam ac odio metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-             In ullamcorper blandit nisl vitae facilisis. Vestibulum pharetra massa non interdum tristique. 
-             Maecenas quis justo id lectus pharetra ornare eget id nisi. 
-             Mauris eu tellus gravida, tristique ex quis, consectetur risus. 
-             Maecenas tellus libero, lacinia id tortor non, porttitor faucibus turpis. 
-             Suspendisse vel nibh eget neque posuere elementum. Duis metus mauris, aliquam pharetra eleifend id, ultrices id eros. 
-             Morbi condimentum facilisis ligula ut aliquet. Sed vitae ante lobortis enim maximus bibendum. 
-             Sed ornare dolor erat, et ultrices turpis tempor ut.
+        <img id="profile-pic" src="assets/images/batplaceholder.jpg" alt="Profile picture (placeholder)">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum scelerisque at mauris a sollicitudin. 
+            Ut non magna diam. Nam egestas augue magna, ac mollis nibh commodo vel. Nam pretium ornare libero id congue. 
+            Aliquam ac odio metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+            In ullamcorper blandit nisl vitae facilisis. Vestibulum pharetra massa non interdum tristique. 
+            Maecenas quis justo id lectus pharetra ornare eget id nisi. 
+            Mauris eu tellus gravida, tristique ex quis, consectetur risus. 
+            Maecenas tellus libero, lacinia id tortor non, porttitor faucibus turpis. 
+            Suspendisse vel nibh eget neque posuere elementum. Duis metus mauris, aliquam pharetra eleifend id, ultrices id eros. 
+            Morbi condimentum facilisis ligula ut aliquet. Sed vitae ante lobortis enim maximus bibendum. 
+            Sed ornare dolor erat, et ultrices turpis tempor ut.
         </p>
     </section>
 
@@ -46,9 +45,5 @@
         <p>Footer content</p>
     </footer>
 </body>
-
-<!--Style
-<style></style>
--->
 
 </html>
