--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,8 @@
 
 <body>
     <header>
-    <h1 id="my-name">Tom Christ</h1>
+    <div class="header-bar">
+    <a href="index.html" id="my-name">Tom Christ</a>
     <nav>
         <p>
         <a href="index.html">About</a> |
@@ -22,15 +23,51 @@
         <a href="contact.html">Contact</a>
         </p>
     </nav>
+    </div>
     </header>
 
     <section>
         <h1>Portfolio</h1>
-        <p>Section content</p>
+        <hr>
+        <!-- Hangman -->
+        <div class="portfolio">
+        <a href="#" title="Hangman">
+            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <h2 class="portfolio-name">Hangman</h2>
+        </a>
+        </div>
+        <!-- RPG Game -->
+        <div class="portfolio">
+        <a href="#" title="RPG Game">
+            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <h2 class="portfolio-name">RPG Game</h2>
+        </a>
+        </div>
+        <!-- Trivia Game -->
+        <div class="portfolio">
+        <a href="#" title="Trivia Game">
+            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <h2 class="portfolio-name">Trivia Game</h2>
+        </a>
+        </div>
+        <!-- Rutgers Info Widget -->
+        <div class="portfolio">
+        <a href="#" title="Rutgers Info Widget">
+            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <h2 class="portfolio-name">Rutgers Info Widget</h2>
+        </a>
+        </div>
+        <!-- Rock Paper Scissors -->
+        <div class="portfolio">
+        <a href="#" title="Rock Paper Scissors">
+            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <h2 class="portfolio-name">Rock Paper Scissors</h2>
+        </a>
+        </div>
     </section>
     
     <footer>
-        <p>Footer Content</p>
+        <p>Copyright (c)</p>
     </footer>
 </body>
 
