--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <header>
-    <h1 id="my-name">Tom Christ</h1>
+    <div class="header-bar">
+    <a href="index.html" id="my-name">Tom Christ</a>
     <nav>
         <p>
         <a href="index.html">About</a> |
@@ -22,13 +23,14 @@
         <a href="contact.html">Contact</a>
         </p>
     </nav>
+    </div>
     </header>
 
     <section>
         <h1>About Me</h1>
         <hr>
         <img id="profile-pic" src="assets/images/batplaceholder.jpg" alt="Profile picture (placeholder)">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum scelerisque at mauris a sollicitudin. 
+            <p class="spaced">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum scelerisque at mauris a sollicitudin. 
             Ut non magna diam. Nam egestas augue magna, ac mollis nibh commodo vel. Nam pretium ornare libero id congue. 
             Aliquam ac odio metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
             In ullamcorper blandit nisl vitae facilisis. Vestibulum pharetra massa non interdum tristique. 
@@ -42,7 +44,7 @@
     </section>
 
     <footer>
-        <p>Footer content</p>
+        <p>Copyright (c)</p>
     </footer>
 </body>
 
