--- a/contact.html
+++ b/contact.html
@@ -36,11 +36,12 @@
             <input type="email" name="email-address"><br>
             <p>Message</p><br>
             <textarea name="message" rows="15"></textarea>
+            <input type="submit" value="Submit" name="submit-button">
         </form>
     </section> 
     
     <footer>
-        <p>Copyright (c)</p>
+        <p>Copyright &copy;</p>
     </footer>
 
 </body>
