--- a/portfolio.html
+++ b/portfolio.html
@@ -32,42 +32,42 @@
         <!-- Hangman -->
         <div class="portfolio">
         <a href="#" title="Hangman">
-            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <img class="portfolio-pic" src="assets/images/ipad-guy.jpg" alt="Portfolio (placeholder)">
             <h2 class="portfolio-name">Hangman</h2>
         </a>
         </div>
         <!-- RPG Game -->
         <div class="portfolio">
         <a href="#" title="RPG Game">
-            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <img class="portfolio-pic" src="assets/images/turntables.jpg" alt="Portfolio (placeholder)">
             <h2 class="portfolio-name">RPG Game</h2>
         </a>
         </div>
         <!-- Trivia Game -->
         <div class="portfolio">
         <a href="#" title="Trivia Game">
-            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <img class="portfolio-pic" src="assets/images/earbuds.jpg" alt="Portfolio (placeholder)">
             <h2 class="portfolio-name">Trivia Game</h2>
         </a>
         </div>
         <!-- Rutgers Info Widget -->
         <div class="portfolio">
         <a href="#" title="Rutgers Info Widget">
-            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <img class="portfolio-pic" src="assets/images/phone-headphones.jpg" alt="Portfolio (placeholder)">
             <h2 class="portfolio-name">Rutgers Info Widget</h2>
         </a>
         </div>
         <!-- Rock Paper Scissors -->
         <div class="portfolio">
         <a href="#" title="Rock Paper Scissors">
-            <img class="portfolio-pic" src="assets/images/batplaceholder.jpg" alt="Portfolio (placeholder)">
+            <img class="portfolio-pic" src="assets/images/led-tv.jpg" alt="Portfolio (placeholder)">
             <h2 class="portfolio-name">Rock Paper Scissors</h2>
         </a>
         </div>
     </section>
     
     <footer>
-        <p>Copyright (c)</p>
+        <p>Copyright &copy;</p>
     </footer>
 </body>
 
