replaced sticky footer method

--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,8 @@
         </form>
     </section> 
     
+    <div class="pusher"> </div>
+
     <footer>
         <p>Copyright &copy;</p>
     </footer>
