--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,8 @@
         </a>
         </div>
     </section>
+
+    <div class="pusher"> </div>
     
     <footer>
         <p>Copyright &copy;</p>
