--- a/index.html
+++ b/index.html
@@ -27,18 +27,8 @@
     <section>
         <h1>About Me</h1>
         <hr>
-        <img id="profile-pic" src="assets/images/batplaceholder.jpg" alt="Profile picture (placeholder)">
-            <p class="spaced">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum scelerisque at mauris a sollicitudin. 
-            Ut non magna diam. Nam egestas augue magna, ac mollis nibh commodo vel. Nam pretium ornare libero id congue. 
-            Aliquam ac odio metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-            In ullamcorper blandit nisl vitae facilisis. Vestibulum pharetra massa non interdum tristique. 
-            Maecenas quis justo id lectus pharetra ornare eget id nisi. 
-            Mauris eu tellus gravida, tristique ex quis, consectetur risus. 
-            Maecenas tellus libero, lacinia id tortor non, porttitor faucibus turpis. 
-            Suspendisse vel nibh eget neque posuere elementum. Duis metus mauris, aliquam pharetra eleifend id, ultrices id eros. 
-            Morbi condimentum facilisis ligula ut aliquet. Sed vitae ante lobortis enim maximus bibendum. 
-            Sed ornare dolor erat, et ultrices turpis tempor ut.
-        </p>
+        <img id="profile-pic" src="assets/images/myface.jpg" alt="Profile picture (placeholder)">
+            <p>I am a Minneapolis-based human web designer. These are a couple of paragraphs about myself. We're having fun, I have a personality! My age is irrelevant, since time is just an illusion created by your--I mean our--three-dimensional existence. I have hobbies, including chores, work, and listening to music. I also like animals. My family-unit contains among its members two canines as well as a small human. The small human's name is Theo and he also has hobbies, including jamming food in my nurient orifice. What a scamp! Family life agrees with me, not that you asked, but I thought you'd like to know. I also enjoy telling computers what to do because I think they're a little too high on themselves. Thank you for reading about me!</p>
     </section>
 
     <div class="pusher"> </div>
